--- a/Views/index.cshtml
+++ b/Views/index.cshtml
@@ -1,3 +1,9 @@
+@{
+    Layout="Shared/_Layout.cshtml";
+}
+
+
+
 <h1>Departments</h1>
 
 @if (@Model.Count == 0)
@@ -8,7 +14,7 @@ else{
     <ol>
     @foreach (var department in @Model)
     {
-        <li>department.GetName()</li>
+        <li>@department.GetName()</li>
     }
     </ol>
 }
